# Permutations

./: CMakeLists.txt  README.md  main.cpp
include/: bed.h  bed_chromosome.h  bed_entry.h  bed_parser.h  bed_randomizer.h  genome_info.h  split.h  str2int.h
src/: bed.cpp  bed_chromosome.cpp  bed_entry.cpp  bed_parser.cpp  bed_randomizer.cpp  genome_info.cpp  split.cpp  str2int.cpp
test/: CMakeLists.txt
test/basic_tests/: CMakeLists.txt  bed_chromosome_tests.cpp  bed_entry_tests.cpp  bed_parser_tests.cpp  bed_randomizer_tests.cpp  bed_tests.cpp  genome_info_tests.cpp
test/test_input/: FOXA2_1.bed  FOXA2_1.csv  FOXA2_1_chr1.bed  FOXA2_1_nohead.bed  FOXA2_1_unsorted.bed  FOXA2_2.bed  FOXA2_2_chr1.bed  FOXA2_2_nohead.bed  bedtools_chr1_intersect.txt  correct.genome.txt  wrong.genome.csv  wrong.genome.txt
